--- a/diatomic_ALLCH.ipynb
+++ b/diatomic_ALLCH.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%reset -f\n",
     "import glob\n",
     "import math\n",
     "import uproot\n",
@@ -48,36 +49,40 @@
     "fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_550eV_CL_ALLCH_diatomic.root\")\n",
     "fileSCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/S-C3H3F3O_550eV_CR_ALLCH_diatomic.root\")\n",
     "fileSCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/S-C3H3F3O_550eV_CL_ALLCH_diatomic.root\")\n",
-    "# CH=\"ALL_CH\";\n",
-    "CH=\"CH14\"; R_plot=False #the last parameter is to plot the R enetiomer at this energy\n",
+    "# CH=\"ALL_CH\"\n",
+    "CH=\"CH14\"\n",
+    "R_plot=False #the last parameter is to plot the R enetiomer at this energy\n",
     "\n",
     "# # 546eV - 8.2eV\n",
     "# fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_546eV_CR_ALLCH_diatomic.root\");en=\"546eV\";\n",
     "# fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_546eV_CL_ALLCH_diatomic.root\")\n",
-    "# # CH=\"ALL_CH\";\n",
-    "# CH=\"CH14\";\n",
+    "# # CH=\"ALL_CH\"\n",
+    "# CH=\"CH14\"\n",
     "\n",
     "# # 544eV - 6.1eV\n",
     "# fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_544.5eV_CR_ALLCH_diatomic.root\");en=\"544eV\";\n",
     "# fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_544.5eV_CL_ALLCH_diatomic.root\")\n",
-    "# # CH=\"ALL_CH\";\n",
-    "# CH=\"CH14\";\n",
+    "# # CH=\"ALL_CH\"\n",
+    "# CH=\"CH14\"\n",
     "\n",
     "# # 542eV - 4eV\n",
     "# fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_542.5eV_CR_ALLCH_diatomic.root\");en=\"542eV\";\n",
     "# fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_542.5eV_CL_ALLCH_diatomic.root\")\n",
-    "# # CH=\"ALL_CH\";\n",
-    "# CH=\"CH14\";\n",
+    "# # CH=\"ALL_CH\"\n",
+    "# CH=\"CH14\"\n",
     "\n",
     "# # 541eV 3eV\n",
     "# fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_541.5eV_CR_ALLCH_diatomic.root\");en=\"541eV\";\n",
     "# fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_541.5eV_CL_ALLCH_diatomic.root\")\n",
-    "# CH=\"ALL_CH\";\n",
-    "# CH=\"CH14\";\n",
+    "# CH=\"ALL_CH\"\n",
+    "# CH=\"CH14\"\n",
     "\n",
     "#True to use the MFPAD projection (16,) instead of ctheta (30,)\n",
     "projection=False\n",
     "comparison=True\n",
+    "#TODO a should become res_cos e res shuld become res_PECD in one function\n",
+    "res_cos=16 #select resolution of the imported cos(theta) for the ALL comnbined.\n",
+    "res_PECD=36 #select resolution of the imported PECD for the ALL comnbined.\n",
     "\n",
     "if CH==\"ALL_CH\":\n",
     "    # path = \"angular_distr_el/\"+CH+\"/test\"\n",
@@ -124,12 +129,12 @@
    "outputs": [],
    "source": [
     "if CH==\"ALL_CH\":\n",
-    "    print(\"ok ALL\")\n",
     "    #NOTE ALL doesn´t have a polarization plane cos(theta) becuase CH9 And CH11 are three bodies breakups\n",
-    "    a=16 #select resolution of the imported graph for the ALL comnbined.\n",
-    "\n",
-    "    MFPAD_RCR_all,MFPAD_RCR_en_all,ctheta_RCR_all,ctheta_RCR_err_all,PECD_axis,ctheta_axis,ctheta_axis_red=fugi.import_PECD3D(fileRCR, loc, a=a,  full=True)\n",
-    "    MFPAD_RCL_all,MFPAD_RCL_en_all,ctheta_RCL_all,ctheta_RCL_err_all=fugi.import_PECD3D(fileRCL, loc, a=a)\n",
+    "    MFPAD_RCR_all,MFPAD_RCR_en_all,ctheta_RCR_all,ctheta_RCR_err_all,PECD_axis,ctheta_axis,ctheta_axis_red=fugi.import_PECD3D(fileRCR, loc, a=res_cos, full=True)\n",
+    "    MFPAD_RCL_all,MFPAD_RCL_en_all,ctheta_RCL_all,ctheta_RCL_err_all=fugi.import_PECD3D(fileRCL, loc, a=res_cos)\n",
+    "    #PECD2D fourfold: they could differ from diatomic!\n",
+    "    PECD2D_RCR_all,cbeta_ctheta=fugi.import_2DPECD(fileRCR, loc, redpol=True, res_PECD=res_PECD)\n",
+    "    PECD2D_RCL_all=fugi.import_2DPECD(fileRCL, loc, redpol=True, res_PECD=res_PECD)[0:1]\n",
     "\n",
     "    if projection:\n",
     "        print(\"with projection: shape = (16,)\")\n",
@@ -144,6 +149,8 @@
     "    MFPAD_RCL_all_norm=fugi.normalise_with_err(MFPAD_RCL_all)\n",
     "    ctheta_RCR_all_norm=fugi.normalise_with_err(ctheta_RCR_all)\n",
     "    ctheta_RCL_all_norm=fugi.normalise_with_err(ctheta_RCL_all)\n",
+    "    PECD2D_RCR_all_norm=fugi.normalise_with_err(PECD2D_RCR_all)\n",
+    "    PECD2D_RCL_all_norm=fugi.normalise_with_err(PECD2D_RCL_all)\n",
     "\n",
     "    #Combining the two polarizations: single intesity fit\n",
     "    ctheta_R_all=np.add(ctheta_RCR_all,np.flip(ctheta_RCL_all))\n",
@@ -156,10 +163,14 @@
     "\n",
     "    #ALL channels combined: polarization doesn´t make sense because of CH9 and CH11 three bodies\n",
     "    mPECD_R_all = np.divide(np.subtract(MFPAD_RCR_all_norm,MFPAD_RCL_all_norm),np.add(MFPAD_RCR_all_norm,MFPAD_RCL_all_norm))\n",
+    "    PECD2D_R_all =  np.divide(np.subtract(PECD2D_RCR_all_norm,PECD2D_RCL_all_norm),np.add(PECD2D_RCR_all_norm,PECD2D_RCL_all_norm))\n",
+    "    print(\"ok ALL\")\n",
     "\n",
     "    if fileSCL and fileSCR is not None:\n",
-    "        MFPAD_SCR_all,MFPAD_SCR_en_all,ctheta_SCR_all,ctheta_SCR_err_all=fugi.import_PECD3D(fileSCR, loc, a=a)\n",
-    "        MFPAD_SCL_all,MFPAD_SCL_en_all,ctheta_SCL_all,ctheta_SCL_err_all=fugi.import_PECD3D(fileSCL, loc, a=a)\n",
+    "        MFPAD_SCR_all,MFPAD_SCR_en_all,ctheta_SCR_all,ctheta_SCR_err_all=fugi.import_PECD3D(fileSCR, loc, a=res_cos)\n",
+    "        MFPAD_SCL_all,MFPAD_SCL_en_all,ctheta_SCL_all,ctheta_SCL_err_all=fugi.import_PECD3D(fileSCL, loc, a=res_cos)\n",
+    "        PECD2D_SCR_all=fugi.import_2DPECD(fileSCR, loc, redpol=True,res_PECD=res_PECD)[0:1]\n",
+    "        PECD2D_SCL_all=fugi.import_2DPECD(fileSCL, loc, redpol=True,res_PECD=res_PECD)[0:1]\n",
     "\n",
     "        if projection:\n",
     "            ctheta_SCR_all=fugi.projection(MFPAD_SCR_all,alongaxis=0)\n",
@@ -172,6 +183,8 @@
     "        MFPAD_SCL_all_norm=fugi.normalise_with_err(MFPAD_SCL_all)\n",
     "        ctheta_SCR_all_norm=fugi.normalise_with_err(ctheta_SCR_all)\n",
     "        ctheta_SCL_all_norm=fugi.normalise_with_err(ctheta_SCL_all)\n",
+    "        PECD2D_SCR_all_norm=fugi.normalise_with_err(PECD2D_SCR_all)\n",
+    "        PECD2D_SCL_all_norm=fugi.normalise_with_err(PECD2D_SCL_all)\n",
     "\n",
     "        ctheta_S_all=np.add(ctheta_SCR_all,np.flip(ctheta_SCL_all))\n",
     "        ctheta_S_all_norm=np.add(ctheta_SCR_all_norm,np.flip(ctheta_SCL_all_norm))\n",
@@ -189,6 +202,8 @@
     "        errPECD_all = fugi.error_calc(ctheta_R_all,ctheta_S_all)\n",
     "\n",
     "        mPECD_S_all = np.divide(np.subtract(MFPAD_SCR_all_norm,MFPAD_SCL_all_norm),np.add(MFPAD_SCR_all_norm,MFPAD_SCL_all_norm))\n",
+    "        PECD2D_S_all =  np.divide(np.subtract(PECD2D_SCR_all_norm,PECD2D_SCL_all_norm),np.add(PECD2D_SCR_all_norm,PECD2D_SCL_all_norm))\n",
+    "    print(\"with S enantiomer\")\n",
     "        "
    ]
   },
@@ -199,17 +214,25 @@
    "outputs": [],
    "source": [
     "if CH==\"CH14\":\n",
-    "    print(\"ok CH14\")\n",
     "    MFPAD_RCR,MFPAD_RCR_en,ctheta_RCR,ctheta_RCR_err,ctheta_pol_RCR,ctheta_pol_RCR_err,PECD_axis,ctheta_axis,ctheta_axis_red=fugi.import_PECD3D_cos(fileRCR,loc,full=True)\n",
     "    MFPAD_RCL,MFPAD_RCL_en,ctheta_RCL,ctheta_RCL_err,ctheta_pol_RCL,ctheta_pol_RCL_err=fugi.import_PECD3D_cos(fileRCL, loc)\n",
+    "    #PECD2D fourfold: they could differ from diatomic!\n",
+    "    PECD2D_RCR,cbeta_ctheta=fugi.import_2DPECD(fileRCR, loc, redpol=True)\n",
+    "    PECD2D_RCL=fugi.import_2DPECD(fileRCL, loc, redpol=True)[0:1]\n",
+    "    CDAD_RCR,cdadcbeta_ctheta=fugi.import_2DPECD(fileRCR, loc, cdad=True, redpol=True)\n",
+    "    CDAD_RCL=fugi.import_2DPECD(fileRCL, loc, cdad=True, redpol=True)[0:1]\n",
+    "\n",
     "\n",
     "    #normalise before ANY PECD\n",
     "    ctheta_RCR_norm=fugi.normalise_with_err(ctheta_RCR)\n",
     "    ctheta_RCL_norm=fugi.normalise_with_err(ctheta_RCL)\n",
-    "\n",
     "    ctheta_pol_RCR_norm=fugi.normalise_with_err(ctheta_pol_RCR)\n",
     "    ctheta_pol_RCL_norm=fugi.normalise_with_err(ctheta_pol_RCL)\n",
-    "    \n",
+    "    PECD2D_RCR_norm=fugi.normalise_with_err(PECD2D_RCR)\n",
+    "    PECD2D_RCL_norm=fugi.normalise_with_err(PECD2D_RCL)\n",
+    "    CDAD_RCR_norm=fugi.normalise_with_err(CDAD_RCR)\n",
+    "    CDAD_RCL_norm=fugi.normalise_with_err(CDAD_RCL)\n",
+    "\n",
     "    #Combining the two polarizations: single intesity fit\n",
     "    ctheta_R=np.add(ctheta_RCR,np.flip(ctheta_RCL))\n",
     "    ctheta_R_norm=np.add(ctheta_RCR_norm,np.flip(ctheta_RCL_norm))\n",
@@ -230,17 +253,28 @@
     "\n",
     "    #ALL channels combined: polarization doesn´t make sense because of CH9 and CH11 three bodies\n",
     "    mPECD_R = np.divide(np.subtract(MFPAD_RCR,MFPAD_RCL),np.add(MFPAD_RCR,MFPAD_RCL))\n",
+    "    PECD2D_R = np.divide(np.subtract(PECD2D_RCR_norm,PECD2D_RCL_norm),np.add(PECD2D_RCR_norm,PECD2D_RCL_norm))\n",
+    "    CDAD_R = np.divide(np.subtract(CDAD_RCR_norm,CDAD_RCL_norm),np.add(CDAD_RCR_norm,CDAD_RCL_norm))\n",
+    "\n",
+    "    print(\"ok CH14\")\n",
     "\n",
     "    if fileSCL and fileSCR is not None:\n",
     "\n",
     "        MFPAD_SCR,MFPAD_SCR_en,ctheta_SCR,ctheta_SCR_err,ctheta_pol_SCR,ctheta_pol_SCR_err=fugi.import_PECD3D_cos(fileSCR, loc)\n",
     "        MFPAD_SCL,MFPAD_SCL_en,ctheta_SCL,ctheta_SCL_err,ctheta_pol_SCL,ctheta_pol_SCL_err=fugi.import_PECD3D_cos(fileSCL, loc)\n",
+    "        PECD2D_SCR=fugi.import_2DPECD(fileSCR, loc, redpol=True)[0:1]\n",
+    "        PECD2D_SCL=fugi.import_2DPECD(fileSCL, loc, redpol=True)[0:1]\n",
+    "        CDAD_SCR=fugi.import_2DPECD(fileSCR, loc, cdad=True, redpol=True)[0:1]\n",
+    "        CDAD_SCL=fugi.import_2DPECD(fileSCL, loc, cdad=True, redpol=True)[0:1]\n",
     "\n",
     "        ctheta_SCR_norm=fugi.normalise_with_err(ctheta_SCR)\n",
     "        ctheta_SCL_norm=fugi.normalise_with_err(ctheta_SCL)\n",
-    "\n",
     "        ctheta_pol_SCR_norm=fugi.normalise_with_err(ctheta_pol_SCR)\n",
     "        ctheta_pol_SCL_norm=fugi.normalise_with_err(ctheta_pol_SCL)\n",
+    "        PECD2D_SCR_norm=fugi.normalise_with_err(PECD2D_SCR)\n",
+    "        PECD2D_SCL_norm=fugi.normalise_with_err(PECD2D_SCL)\n",
+    "        CDAD_SCR_norm=fugi.normalise_with_err(CDAD_SCR)\n",
+    "        CDAD_SCL_norm=fugi.normalise_with_err(CDAD_SCL)\n",
     "\n",
     "        ctheta_S=np.add(ctheta_SCR,np.flip(ctheta_SCL))\n",
     "        ctheta_S_norm=np.add(ctheta_SCR_norm,np.flip(ctheta_SCL_norm))\n",
@@ -272,7 +306,11 @@
     "        # cPECD_pol=np.divide(np.subtract(ctheta_pol_RCR_norm,ctheta_pol_RCL_norm),np.add(ctheta_pol_RCR_norm,ctheta_pol_RCL_norm))\n",
     "        errPECD_pol=fugi.error_calc(ctheta_R_pol,ctheta_S_pol)\n",
     "        \n",
-    "        mPECD_S=np.divide(np.subtract(MFPAD_SCR,MFPAD_SCL),np.add(MFPAD_SCR,MFPAD_SCL))"
+    "        mPECD_S=np.divide(np.subtract(MFPAD_SCR,MFPAD_SCL),np.add(MFPAD_SCR,MFPAD_SCL))\n",
+    "        PECD2D_S = np.divide(np.subtract(PECD2D_SCR_norm,PECD2D_SCL_norm),np.add(PECD2D_SCR_norm,PECD2D_SCL_norm))\n",
+    "        CDAD_S = np.divide(np.subtract(CDAD_SCR_norm,CDAD_SCL_norm),np.add(CDAD_SCR_norm,CDAD_SCL_norm))\n",
+    "\n",
+    "    print(\"with S-enantiomer\")"
    ]
   },
   {
@@ -846,7 +884,114 @@
     "    ax1.set_aspect(aspect)\n",
     "\n",
     "    fig.savefig(\"../PYTHON_graphs/OUTPUTS/Diatomic/PECD_pol_VS_\"+CH+\"_\"+en+\"_exp.png\", figsize=(12, 10), dpi=144, transparent=False, bbox_inches='tight')\n",
-    "    fig.savefig(\"../PYTHON_graphs/OUTPUTS/Diatomic/PECD_pol_VS_\"+CH+\"_\"+en+\"_exp.svg\", figsize=(12, 10), dpi=144, transparent=False, bbox_inches='tight')\n"
+    "    fig.savefig(\"../PYTHON_graphs/OUTPUTS/Diatomic/PECD_pol_VS_\"+CH+\"_\"+en+\"_exp.svg\", figsize=(12, 10), dpi=144, transparent=False, bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2DPECD CH14, ALL, with S-enant\n",
+    "# fugi = reload(fugi)\n",
+    "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
+    "if CH == \"CH14\":\n",
+    "    #cs=ax.pcolormesh(cbeta_ctheta[0], cbeta_ctheta[1], PECD2D_R[0].T*100,cmap=cmap_temp, shading=\"gouraud\")\n",
+    "    cs,ax=fugi.plot_interpolation(cbeta_ctheta[0], cbeta_ctheta[1], PECD2D_R[0].T*100, xstep=0.025, ystep=0.05, gaussian=0.1, ax=ax, cmap=cmap_temp)\n",
+    "else:\n",
+    "    #cs=ax.pcolormesh(cbeta_ctheta[0], cbeta_ctheta[1], PECD2D_R_all[0].T*100,cmap=cmap_temp, shading=\"gouraud\")\n",
+    "    cs,ax=fugi.plot_interpolation(cbeta_ctheta[0], cbeta_ctheta[1], PECD2D_R_all[0].T*100+3, xstep=0.025, ystep=0.05, gaussian=0.1, ax=ax, cmap=cmap_temp)\n",
+    "\n",
+    "ax.set_title(\"R CR-CL PECD map \"+CH+\" \"+en)\n",
+    "ax.set_xlabel('cos\\u03B2 [adm]')\n",
+    "ax.set_ylabel('cos\\u03D1 [adm]')\n",
+    "\n",
+    "# cbar = fugi.clippedcolorbar(cs,shrink=0.9, ax=cs)\n",
+    "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
+    "# cbar.set_ticks([totMFPAD.min(),totMFPAD.max()])\n",
+    "cbar.ax.set_ylabel('% PECD')\n",
+    "\n",
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Diatomic/2DPECD_RCRCL_\"+CH+\"_\"+en+\"_exp_diatomic.png\", figsize=(12, 10), dpi=144, transparent=False, bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2DPECD CH14, ALL\n",
+    "if fileSCL and fileSCR is not None:\n",
+    "    # fugi = reload(fugi)\n",
+    "    fig,ax= plt.subplots(1, figsize=(12, 10))\n",
+    "    if CH == \"CH14\":\n",
+    "        #cs=ax.pcolormesh(cbeta_ctheta[0], cbeta_ctheta[1], PECD2D_S[0].T*100,cmap=cmap_temp, shading=\"gouraud\")\n",
+    "        cs,ax=fugi.plot_interpolation(cbeta_ctheta[0], cbeta_ctheta[1], PECD2D_S[0].T*100, xstep=0.025, ystep=0.05, gaussian=0.1, ax=ax, cmap=cmap_temp)\n",
+    "    else:\n",
+    "        # cs=ax.pcolormesh(cbeta_ctheta[0], cbeta_ctheta[1], PECD2D_S_all[0].T*100,cmap=cmap_temp, shading=\"gouraud\")\n",
+    "        cs,ax=fugi.plot_interpolation(cbeta_ctheta[0], cbeta_ctheta[1], PECD2D_S_all[0].T*100, xstep=0.025, ystep=0.05, gaussian=0.2, ax=ax, cmap=cmap_temp)\n",
+    "\n",
+    "    ax.set_title(\"S CR-CL PECD map \"+CH+\" \"+en)\n",
+    "    ax.set_xlabel('cos\\u03B2 [adm]')\n",
+    "    ax.set_ylabel('cos\\u03D1 [adm]')\n",
+    "\n",
+    "    # cbar = fugi.clippedcolorbar(cs,shrink=0.9, ax=cs)\n",
+    "    cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
+    "    # cbar.set_ticks([totMFPAD.min(),totMFPAD.max()])\n",
+    "    cbar.ax.set_ylabel('% PECD')\n",
+    "\n",
+    "    fig.savefig(\"../PYTHON_graphs/OUTPUTS/Diatomic/2DPECD_SCRCL_\"+CH+\"_\"+en+\"_exp_diatomic.png\", figsize=(12, 10), dpi=144, transparent=False, bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#CDAD CH14\n",
+    "# fugi = reload(fugi)\n",
+    "if CH == \"CH14\":\n",
+    "    fig,ax= plt.subplots(1, figsize=(12, 10))\n",
+    "    #cs=ax.pcolormesh(cdadcbeta_ctheta[0], cdadcbeta_ctheta[1], CDAD_R[0].T*100,cmap=cmap_temp, shading=\"gouraud\")\n",
+    "    cs,ax=fugi.plot_interpolation(cdadcbeta_ctheta[0], cdadcbeta_ctheta[1], CDAD_R[0].T*100, xstep=0.025, ystep=0.05, gaussian=0.1, ax=ax, cmap=cmap_temp)\n",
+    "\n",
+    "    ax.set_title(\"R CR-CL CDAD map \"+CH+\" \"+en)\n",
+    "    ax.set_xlabel('cos\\u03B2 [adm]')\n",
+    "    ax.set_ylabel('cos\\u03D1 [adm]')\n",
+    "\n",
+    "    # cbar = fugi.clippedcolorbar(cs,shrink=0.9, ax=cs)\n",
+    "    cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
+    "    # cbar.set_ticks([totMFPAD.min(),totMFPAD.max()])\n",
+    "    cbar.ax.set_ylabel('% CDAD')\n",
+    "\n",
+    "    fig.savefig(\"../PYTHON_graphs/OUTPUTS/Diatomic/CDAD_RCRCL_\"+CH+\"_\"+en+\"_exp_diatomic.png\", figsize=(12, 10), dpi=144, transparent=False, bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#CDAD CH14 with S-enant\n",
+    "# fugi = reload(fugi)\n",
+    "if CH == \"CH14\" and (fileSCL and fileSCR is not None):\n",
+    "    fig,ax= plt.subplots(1, figsize=(12, 10))\n",
+    "    #cs=ax.pcolormesh(cdadcbeta_ctheta[0], cdadcbeta_ctheta[1], CDAD_R[0].T*100,cmap=cmap_temp, shading=\"gouraud\")\n",
+    "    cs,ax=fugi.plot_interpolation(cdadcbeta_ctheta[0], cdadcbeta_ctheta[1], CDAD_R[0].T*100, xstep=0.025, ystep=0.05, gaussian=0.1, ax=ax, cmap=cmap_temp)\n",
+    "\n",
+    "    ax.set_title(\"S CR-CL CDAD map \"+CH+\" \"+en)\n",
+    "    ax.set_xlabel('cos\\u03B2 [adm]')\n",
+    "    ax.set_ylabel('cos\\u03D1 [adm]')\n",
+    "\n",
+    "    # cbar = fugi.clippedcolorbar(cs,shrink=0.9, ax=cs)\n",
+    "    cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
+    "    # cbar.set_ticks([totMFPAD.min(),totMFPAD.max()])\n",
+    "    cbar.ax.set_ylabel('% PECD')\n",
+    "\n",
+    "    fig.savefig(\"../PYTHON_graphs/OUTPUTS/Diatomic/CDAD_SCRCL_\"+CH+\"_\"+en+\"_exp_diatomic.png\", figsize=(12, 10), dpi=144, transparent=False, bbox_inches='tight')"
    ]
   },
   {
@@ -904,11 +1049,9 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "0314860021bfd1d6d5065173ecf1d472a069bf5b92310f1daa2ee9c3af705d8c"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit ('base': conda)",
+   "display_name": "Python 3.8.12 ('python_graphs')",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -926,6 +1069,11 @@
   "metadata": {
    "interpreter": {
     "hash": "0314860021bfd1d6d5065173ecf1d472a069bf5b92310f1daa2ee9c3af705d8c"
+   }
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "e3e66c793b5272eb6ced2ef395fa3f1e661a5b1d7880dcfb1a8fb41860f8b331"
    }
   }
  },
