graph for new molecular orientation Philipp Flipped fragments

--- a/standard_graphs.ipynb
+++ b/standard_graphs.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%reset -f\n",
     "import glob\n",
     "import pandas as pd\n",
     "import uproot\n",
@@ -515,7 +516,8 @@
     "def listOfTuples3D(l1, l2, l3):\n",
     "    return list(map(lambda x, y, z:(x,y,z), l1, l2, l3))\n",
     "\n",
-    "PDB_S_coord_raw=pd.read_table(r'../PYTHON_graphs/MOL_structures/S-TFMOx.pdb',header=None,delim_whitespace=True,nrows=10,skiprows=2)\n",
+    "# PDB_S_coord_raw=pd.read_table(r'../PYTHON_graphs/MOL_structures/S-TFMOx.pdb',header=None,delim_whitespace=True,nrows=10,skiprows=2)\n",
+    "PDB_S_coord_raw=pd.read_table(r'../PYTHON_graphs/MOL_structures/R-TFMOx_phil.pdb',header=None,delim_whitespace=True,nrows=10,skiprows=2)\n",
     "df_S_PDB=PDB_S_coord_raw.drop(PDB_S_coord_raw.columns[[0,1,3,4,8,9,10]], axis=1)\n",
     "df_S_PDB.columns = ['atom', 'x', 'y', 'z']\n",
     "# df_S_PDB['x'] = 0.664 + df_S_PDB['x'] #shifting the origin of the molecule\n",
@@ -650,6 +652,99 @@
     "fig = go.Figure(data=data)\n",
     "\n",
     "fig.update_layout(width=900, height=800, title_text=\"R-TFMOx\")\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#atom position Philipp R-TFMOx optimized\n",
+    "def listOfTuples(l1, l2):\n",
+    "    return list(map(lambda x, y:(x,y), l1, l2))\n",
+    "\n",
+    "def listOfTuples3D(l1, l2, l3):\n",
+    "    return list(map(lambda x, y, z:(x,y,z), l1, l2, l3))\n",
+    "\n",
+    "PDB_R_coord_raw=pd.read_table(r'../PYTHON_graphs/MOL_structures/R-TFMOx_phil.pdb',header=None,delim_whitespace=True,nrows=10,skiprows=2)\n",
+    "df_R_PDB=PDB_R_coord_raw.drop(PDB_R_coord_raw.columns[[0,1,3,4,8,9,10]], axis=1)\n",
+    "df_R_PDB.columns = ['atom', 'x', 'y', 'z']\n",
+    "# df_R_PDB['z'] = -1 * df_R_PDB['z'] #mirroring the copy of the S enantiomer\n",
+    "# df_R_PDB['x'] = 0.664 + df_R_PDB['x'] #shifting the origin of the molecule\n",
+    "\n",
+    "#read the CONNECT section of the pdb and subtract one: the first colum is the first element of tuple\n",
+    "edge_list=[(0,6),(1,6),(2,6),(3,4),(3,5),(4,3),(4,5),(4,6),(4,7),(5,3),(5,4),(5,8),(5,9),(6,0),(6,1),(6,2),(6,4),(7,4),(8,5),(9,5)]\n",
+    "\n",
+    "#rotation\n",
+    "a=12.;b=13.; g=-9 #550eV from optimization\n",
+    "\n",
+    "##################### R enantiomer ########################\n",
+    "xyzm = np.stack((df_R_PDB['x'], df_R_PDB['y'], df_R_PDB['z']))\n",
+    "x_rot_R, y_rot_R, z_rot_R = np.einsum('ik, kj -> ij', fugi.rot3d(a*np.pi/180,b*np.pi/180,g*np.pi/180,convention=1).T, xyzm)\n",
+    "\n",
+    "r_R=[];ctheta_PDB_R=[];phi_PDB_R=[]; r_R_rot=[];ctheta_PDB_R_rot=[];phi_PDB_R_rot=[];\n",
+    "for index, row in df_R_PDB.iterrows():\n",
+    "    r_R.append(np.sqrt(row['x']**2+row['y']**2+row['z']**2))\n",
+    "    ctheta_PDB_R.append(row['z']/r_R[index])\n",
+    "    phi_PDB_R.append(np.arctan2(row['y'],row['x'])*180./np.pi)\n",
+    "\n",
+    "    r_R_rot.append(np.sqrt(x_rot_R[index]**2+y_rot_R[index]**2+z_rot_R[index]**2))\n",
+    "    ctheta_PDB_R_rot.append(z_rot_R[index]/r_R_rot[index])\n",
+    "    phi_PDB_R_rot.append(np.arctan2(y_rot_R[index],x_rot_R[index])*180./np.pi)\n",
+    "\n",
+    "df_R_PDB.insert(4, \"x_rot\", x_rot_R, True); df_R_PDB.insert(5, \"y_rot\", y_rot_R, True); df_R_PDB.insert(6, \"z_rot\", z_rot_R, True);\n",
+    "df_R_PDB.insert(7, \"phi\", phi_PDB_R, True); df_R_PDB.insert(8, \"ctheta\", ctheta_PDB_R, True);\n",
+    "df_R_PDB.insert(9, \"phi_rot\", phi_PDB_R_rot, True); df_R_PDB.insert(10, \"ctheta_rot\", ctheta_PDB_R_rot, True)\n",
+    "\n",
+    "xyzm_rot = np.stack((df_R_PDB['x_rot'], df_R_PDB['y_rot'], df_R_PDB['z_rot']))\n",
+    "\n",
+    "#we  need to create lists that contain the starting and ending coordinates of each edge.\n",
+    "x_edges_R=[]; y_edges_R=[]; z_edges_R=[]\n",
+    "x_edges_rot_R=[]; y_edges_rot_R=[]; z_edges_rot_R=[]\n",
+    "\n",
+    "#need to fill these with all of the coordiates\n",
+    "for edge in edge_list:\n",
+    "    x_coords_rot = [xyzm_rot.T[edge[0]][0],xyzm_rot.T[edge[1]][0],None]\n",
+    "    x_edges_rot_R += x_coords_rot\n",
+    "    x_coords = [xyzm.T[edge[0]][0],xyzm.T[edge[1]][0],None]\n",
+    "    x_edges_R += x_coords\n",
+    "\n",
+    "    y_coords_rot = [xyzm_rot.T[edge[0]][1],xyzm_rot.T[edge[1]][1],None]\n",
+    "    y_edges_rot_R += y_coords_rot\n",
+    "    y_coords = [xyzm.T[edge[0]][1],xyzm.T[edge[1]][1],None]\n",
+    "    y_edges_R += y_coords\n",
+    "\n",
+    "    z_coords_rot = [xyzm_rot.T[edge[0]][2],xyzm_rot.T[edge[1]][2],None]\n",
+    "    z_edges_rot_R += z_coords_rot\n",
+    "    z_coords = [xyzm.T[edge[0]][2],xyzm.T[edge[1]][2],None]\n",
+    "    z_edges_R += z_coords\n",
+    "\n",
+    "### plotting\n",
+    "\n",
+    "trace_nodes = go.Scatter3d(x=df_R_PDB['x_rot'], y=df_R_PDB['y_rot'], z=df_R_PDB['z_rot'],\n",
+    "                        text=df_R_PDB['atom'], mode='markers', marker=dict( size=15, opacity=0.8),name='ROT atom')\n",
+    "\n",
+    "trace_edges_rot = go.Scatter3d(x=x_edges_rot_R, y=y_edges_rot_R, z=z_edges_rot_R,\n",
+    "                        mode='lines', line=dict(color='black', width=6), name='ROT bond',hoverinfo='none')\n",
+    "\n",
+    "trace_edges = go.Scatter3d(x=x_edges_R,y=y_edges_R,z=z_edges_R,\n",
+    "                        mode='lines',line=dict(color='red', width=2),name='PD original',hoverinfo='none')\n",
+    "\n",
+    "origin = go.Scatter3d(x=[0.],y=[0.],z=[0.],\n",
+    "                     mode='markers', marker=dict(color='red', size=10, opacity=1),name=\"origin\")\n",
+    "\n",
+    "x= np.linspace(-2, 2, 20); y= np.linspace(-2, 2, 20); z= 0*np.ones((20,20))\n",
+    "mycolorscale = [[0, '#aa9ce2'],[1, '#aa9ce2']]\n",
+    "\n",
+    "surf = go.Surface(x=x, y=y, z=z, colorscale=mycolorscale, opacity=0.4, showscale=False)\n",
+    "\n",
+    "data = [trace_nodes, trace_edges_rot, trace_edges, origin, surf]\n",
+    "fig = go.Figure(data=data)\n",
+    "\n",
+    "fig.update_layout(width=900, height=800, title_text=\"R-TFMOx optimized\")\n",
+    "fig.write_html(dir+\"R-TFMOx_opt_PD.html\")\n",
     "fig.show()"
    ]
   },
@@ -1562,6 +1657,48 @@
     "arrow2 = patches.Arrow(0, 0, -0.2, -0.05, width=0.09, color=\"r\", alpha=0.6)\n",
     "arrow3 = patches.Arrow(0, 0, 0.2, -0.95, width=0.05, color=\"r\", alpha=0.6)\n",
     "ax.add_patch(arrow1); ax.add_patch(arrow2); ax.add_patch(arrow3); \n",
+    "text1=ax.text(-0.6,-0.1, \"$OH^{0}$\") #,fontweight=\"bold\")\n",
+    "text2=ax.text(0.25,-1.35, \"$C_{2}H_{i}^{+}$\") #,fontweight=\"bold\")\n",
+    "text3=ax.text(0.,1.2, \"$CF_{3}^{+}$\") #,fontweight=\"bold\")\n",
+    "text1.set_path_effects([PathEffects.withStroke(linewidth=4, foreground='w', alpha=0.5)])\n",
+    "text2.set_path_effects([PathEffects.withStroke(linewidth=4, foreground='w', alpha=0.5)])\n",
+    "text3.set_path_effects([PathEffects.withStroke(linewidth=4, foreground='w', alpha=0.5)])\n",
+    "\n",
+    "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
+    "cbar.set_ticks([cs.get_array().min(),cs.get_array().max()])\n",
+    "# cbar.set_ticks(np.linspace(cs.get_array().min(),cs.get_array().max(),5))\n",
+    "# cbar.set_ticks([cs.get_clim()[0],cs.get_clim()[1]])\n",
+    "cbar.set_ticklabels([0,\"%d\" % cs.get_array().max()])\n",
+    "cbar.ax.set_ylabel('absolute counts')\n",
+    "\n",
+    "fig.savefig(dir+\"MF_ion_CH11.png\", dpi=300, transparent=False, bbox_inches='tight')\n",
+    "# fig.savefig(dir+\"el_sum_wlayer.svg\", dpi=300, transparent=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
+    "\n",
+    "mod_count =np.clip(np.sum(counts,axis=1), -1, 1.5e4)\n",
+    "\n",
+    "counts_ion_red=np.ma.masked_array(mod_count,mod_count<1)\n",
+    "\n",
+    "my_cmap = mpl.cm.get_cmap('viridis').copy(); my_cmap.set_under('w')\n",
+    "cs,ax=fugi.plot_interpolation(pz_MF,px_MF,counts_ion_red.T, cmap=my_cmap, xstep=.01, ystep=.01, ax=ax, s_test=5, cont=False)\n",
+    "\n",
+    "ax.set_xlabel('p$_{x}$ [a.u.]')\n",
+    "ax.set_ylabel('p$_{y}$ [a.u.]')\n",
+    "ax.set_xlim(-0.75,0.75)\n",
+    "ax.set_ylim(-1.8,1.5)\n",
+    "\n",
+    "arrow1 = patches.Arrow(0, 0, 0.035, 1, width=0.05, color=\"r\", alpha=0.6)\n",
+    "arrow2 = patches.Arrow(0, 0, -0.2, -0.05, width=0.09, color=\"r\", alpha=0.6)\n",
+    "arrow3 = patches.Arrow(0, 0, 0.2, -0.95, width=0.05, color=\"r\", alpha=0.6)\n",
+    "ax.add_patch(arrow1); ax.add_patch(arrow2); ax.add_patch(arrow3); \n",
     "text1=ax.text(-0.6,-0.1, \"$OH^{0}$\", rotation=180) #,fontweight=\"bold\")\n",
     "text2=ax.text(0.25,-1.35, \"$C_{2}H_{i}^{+}$\", rotation=180) #,fontweight=\"bold\")\n",
     "text3=ax.text(0.,1.2, \"$CF_{3}^{+}$\", rotation=180) #,fontweight=\"bold\")\n",
@@ -1577,6 +1714,48 @@
     "cbar.ax.set_ylabel('absolute counts')\n",
     "\n",
     "fig.savefig(dir+\"MF_ion_CH11_flip.png\", dpi=300, transparent=False, bbox_inches='tight')\n",
+    "# fig.savefig(dir+\"el_sum_wlayer.svg\", dpi=300, transparent=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
+    "\n",
+    "mod_count =np.clip(np.sum(counts,axis=1), -1, 1.5e4)\n",
+    "\n",
+    "counts_ion_red=np.ma.masked_array(mod_count,mod_count<1)\n",
+    "\n",
+    "my_cmap = mpl.cm.get_cmap('viridis').copy(); my_cmap.set_under('w')\n",
+    "cs,ax=fugi.plot_interpolation(pz_MF*-1,px_MF,counts_ion_red.T, cmap=my_cmap, xstep=.01, ystep=.01, ax=ax, s_test=5, cont=False)\n",
+    "\n",
+    "ax.set_xlabel('p$_{x}$ [a.u.]')\n",
+    "ax.set_ylabel('p$_{y}$ [a.u.]')\n",
+    "ax.set_xlim(-0.75,0.75)\n",
+    "ax.set_ylim(-1.8,1.5)\n",
+    "\n",
+    "arrow1 = patches.Arrow(0, 0, -0.035, 1, width=0.05, color=\"r\", alpha=0.6)\n",
+    "arrow2 = patches.Arrow(0, 0, 0.2, -0.05, width=0.09, color=\"r\", alpha=0.6)\n",
+    "arrow3 = patches.Arrow(0, 0, -0.2, -0.95, width=0.05, color=\"r\", alpha=0.6)\n",
+    "ax.add_patch(arrow1); ax.add_patch(arrow2); ax.add_patch(arrow3); \n",
+    "text1=ax.text(0.4,-0.1, \"$OH^{0}$\") #,fontweight=\"bold\")\n",
+    "text2=ax.text(-0.01,-1.35, \"$C_{2}H_{i}^{+}$\") #,fontweight=\"bold\")\n",
+    "text3=ax.text(-0.4,1.2, \"$CF_{3}^{+}$\") #,fontweight=\"bold\")\n",
+    "text1.set_path_effects([PathEffects.withStroke(linewidth=4, foreground='w', alpha=0.5)])\n",
+    "text2.set_path_effects([PathEffects.withStroke(linewidth=4, foreground='w', alpha=0.5)])\n",
+    "text3.set_path_effects([PathEffects.withStroke(linewidth=4, foreground='w', alpha=0.5)])\n",
+    "\n",
+    "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
+    "cbar.set_ticks([cs.get_array().min(),cs.get_array().max()])\n",
+    "# cbar.set_ticks(np.linspace(cs.get_array().min(),cs.get_array().max(),5))\n",
+    "# cbar.set_ticks([cs.get_clim()[0],cs.get_clim()[1]])\n",
+    "cbar.set_ticklabels([0,\"%d\" % cs.get_array().max()])\n",
+    "cbar.ax.set_ylabel('absolute counts')\n",
+    "\n",
+    "fig.savefig(dir+\"MF_ion_CH11_negx.png\", dpi=300, transparent=False, bbox_inches='tight')\n",
     "# fig.savefig(dir+\"el_sum_wlayer.svg\", dpi=300, transparent=False)"
    ]
   },
@@ -2003,11 +2182,9 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "dc800e5d61c9e3c049001c7d7cf96b16f7c8a1a7caee44baf3fc436d9ec555c3"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit ('base': conda)",
+   "display_name": "Python 3.8.12 ('python_graphs')",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -2025,6 +2202,11 @@
   "metadata": {
    "interpreter": {
     "hash": "0314860021bfd1d6d5065173ecf1d472a069bf5b92310f1daa2ee9c3af705d8c"
+   }
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "e3e66c793b5272eb6ced2ef395fa3f1e661a5b1d7880dcfb1a8fb41860f8b331"
    }
   }
  },
