--- a/3D_MFPADs_exp_all.ipynb
+++ b/3D_MFPADs_exp_all.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%reset -f\n",
     "import glob\n",
     "import math\n",
     "import uproot\n",
@@ -265,7 +266,11 @@
     "\n",
     "else:\n",
     "    MFPAD_tot_sum=MFPAD_R_sum\n",
-    "    MFPAD_tot_sum_norm=fugi.normalise_with_err(MFPAD_tot_sum,normtype=3)"
+    "    MFPAD_tot_sum_norm=fugi.normalise_with_err(MFPAD_tot_sum,normtype=3)\n",
+    "\n",
+    "\n",
+    "MFPAD_tot_sum_flip=np.flip(MFPAD_tot_sum,axis=1)\n",
+    "MFPAD_tot_sum_flip_norm=fugi.normalise_with_err(MFPAD_tot_sum_flip,normtype=2)\n"
    ]
   },
   {
@@ -352,43 +357,52 @@
     "    MFPAD_SCLCR_phi_norm=fugi.normalise_with_err(MFPAD_SCLCR_phi,normtype=2)\n",
     "\n",
     "    #sum enantiomer: -cos(theta) fliped axis=1 cos!, -cos(theta) photon coordinates. it shouldn´t be normalized!\n",
-    "    temp_totordered_std=np.empty([12,6,648])\n",
-    "    temp_totordered=np.empty([12,6,648])\n",
-    "    temp_totordered_flip=np.empty([12,6,648]) #to compare to MOx\n",
+    "    temp_totordered_S=np.empty([12,6,648])\n",
+    "    temp_totordered_S_rev=np.empty([12,6,648]) #for the paper CR-CL\n",
+    "    temp_totordered_R=np.empty([12,6,648]) #to compare to S-MOx CL-CR\n",
+    "    temp_totordered_R_rev=np.empty([12,6,648]) #for the paper CR-CL\n",
     "\n",
     "    for j in range(12):\n",
     "        for i in range(6):\n",
-    "            temp_totordered_std[j,i]=np.add(temp_SCLCR[j,i],gaussian_filter(temp_RCLCR_flip, sigma=0.3)[j,5-i]) #the correct version to Kilian\n",
-    "            temp_totordered[j,i]=np.add(temp_SCLCR[j,i],gaussian_filter(temp_RCLCR, sigma=0.3)[j,i]) #better for 72 MFPADs and SR PECD? yes\n",
-    "            temp_totordered_flip[j,i]=np.add(gaussian_filter(temp_RCLCR, sigma=0.3)[j,i],np.flip(temp_SCLCR[j,5-i].reshape(nphi,ncos),axis=0).reshape(-1)) #works, but R is noisy\n",
-    "\n",
-    "    MFPAD_totordered=np.array(temp_totordered).reshape(72,nphi,ncos)\n",
-    "    MFPAD_totordered_flip=np.array(temp_totordered_flip).reshape(72,nphi,ncos)\n",
+    "            #sums according to Fehre et al., fourfold differential 2021\n",
+    "            temp_totordered_S[j,i]=np.add(temp_SCLCR[j,i],gaussian_filter(temp_RCRCL_flip, sigma=0.3)[j,5-i]) #!S-enant: smart sum of the flipped R-enant along cos_el\n",
+    "            temp_totordered_S_rev[j,i]=np.add(temp_SCRCL[j,i],gaussian_filter(temp_RCLCR_flip, sigma=0.3)[j,5-i]) #!same, but for opposite helicity\n",
+    "            temp_totordered_R[j,i]=np.add(gaussian_filter(temp_RCLCR[j,i], sigma=0.3),temp_SCRCL_flip[j,5-i]) #!R-enant: smart sum of the flipped R-enant along cos_el\n",
+    "            temp_totordered_R_rev[j,i]=np.add(gaussian_filter(temp_RCRCL[j,i], sigma=0.3),temp_SCLCR_flip[j,5-i]) #!same, but for opposite helicity\n",
+    "            \n",
+    "    MFPAD_totordered_S=np.array(temp_totordered_S).reshape(72,nphi,ncos)\n",
+    "    MFPAD_totordered_S_rev=np.array(temp_totordered_S_rev).reshape(72,nphi,ncos)\n",
+    "    MFPAD_totordered_R=np.array(temp_totordered_R).reshape(72,nphi,ncos)\n",
+    "    MFPAD_totordered_R_rev=np.array(temp_totordered_R_rev).reshape(72,nphi,ncos)\n",
     "    \n",
     "    #sorting\n",
-    "    MFPAD_totordered_cos=fugi.sorting_array(MFPAD_totordered, theory=False, a=1)\n",
-    "    MFPAD_totordered_phi=fugi.sorting_array(MFPAD_totordered, theory=False, a=2) #equal to the original!\n",
-    "    MFPAD_totordered_phi_norm=fugi.normalise_with_err(MFPAD_totordered_phi,normtype=3)\n",
+    "    # MFPAD_totordered_S_cos=fugi.sorting_array(MFPAD_totordered_S, theory=False, a=1)\n",
+    "    MFPAD_totordered_S_phi=fugi.sorting_array(MFPAD_totordered_S, theory=False, a=2) #equal to the original!\n",
+    "    MFPAD_totordered_S_rev_phi=fugi.sorting_array(MFPAD_totordered_S_rev, theory=False, a=2) #equal to the original!\n",
+    "    # MFPAD_totordered_R_cos=fugi.sorting_array(MFPAD_totordered_R, theory=False, a=1)\n",
+    "    MFPAD_totordered_R_phi=fugi.sorting_array(MFPAD_totordered_R, theory=False, a=2) #equal to the original!\n",
+    "    MFPAD_totordered_R_rev_phi=fugi.sorting_array(MFPAD_totordered_R_rev, theory=False, a=2) #equal to the original!\n",
     "\n",
+    "    #normalizing\n",
     "    MFPAD_RCLCR_sum_norm=fugi.normalise_with_err(MFPAD_RCLCR_sum,normtype=2)\n",
     "    MFPAD_SCLCR_sum_norm=fugi.normalise_with_err(MFPAD_SCLCR_sum,normtype=2)\n",
-    "\n",
+    "    MFPAD_totordered_S_phi_norm3=fugi.normalise_with_err(MFPAD_totordered_S_phi,normtype=3)\n",
+    "    MFPAD_totordered_S_phi_norm=fugi.normalise_with_err(MFPAD_totordered_S_phi,normtype=2)\n",
+    "    MFPAD_totordered_S_rev_phi_norm=fugi.normalise_with_err(MFPAD_totordered_S_rev_phi,normtype=2)\n",
+    "    MFPAD_totordered_R_phi_norm=fugi.normalise_with_err(MFPAD_totordered_R_phi,normtype=2)\n",
+    "    MFPAD_totordered_R_rev_phi_norm=fugi.normalise_with_err(MFPAD_totordered_R_rev_phi,normtype=2)\n",
     "    #the cos of the single MFPAD has to be reversed: JUST ALONG COS(theta) -> axis=1\n",
-    "    MFPAD_tot_sum_flip=np.flip(MFPAD_tot_sum,axis=1)\n",
-    "    MFPAD_tot_sum_flip_norm=fugi.normalise_with_err(MFPAD_tot_sum_flip,normtype=2)\n",
-    "    # has to be normalized to avoid the contribution of unballanced counts\n",
-    "\n",
+    "    \n",
     "else:\n",
-    "    MFPAD_totordered=MFPAD_RCLCR    \n",
-    "    MFPAD_totordered_cos=MFPAD_RCLCR_cos\n",
-    "    MFPAD_totordered_phi=MFPAD_RCLCR_phi\n",
-    "    MFPAD_totordered_phi_norm=fugi.normalise_with_err(MFPAD_totordered_phi,normtype=3)\n",
-    "\n",
-    "    MFPAD_totordered_flip=np.array(temp1).reshape(72,nphi,ncos)\n",
+    "    MFPAD_totordered_R=MFPAD_RCLCR\n",
+    "    MFPAD_totordered_R_rev=MFPAD_RCRCL\n",
+    "    # MFPAD_totordered_R_cos=MFPAD_RCLCR_cos\n",
+    "    MFPAD_totordered_R_phi=MFPAD_RCLCR_phi\n",
+    "    MFPAD_totordered_R_flip=np.array(MFPAD_RCLCR_flip).reshape(72,nphi,ncos)\n",
     "\n",
     "    #PECD check it is equal to contrast; has to be normalized to avoid the contribution of unballanced counts\n",
-    "    MFPAD_totordered_sum_norm=fugi.normalise_with_err(np.sum(MFPAD_totordered,axis=0),normtype=2)\n",
-    "    MFPAD_totordered_sum_flip_norm=fugi.normalise_with_err(np.sum(MFPAD_totordered_flip,axis=0),normtype=2)"
+    "    MFPAD_totordered_R_sum_norm=fugi.normalise_with_err(np.sum(MFPAD_totordered_R,axis=0),normtype=2)\n",
+    "    MFPAD_totordered_R_sum_flip_norm=fugi.normalise_with_err(np.sum(MFPAD_totordered_R_flip,axis=0),normtype=2)"
    ]
   },
   {
@@ -400,7 +414,7 @@
     "fig, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row')\n",
     "\n",
     "for i,ax in enumerate(np.flip(axes.T,axis=1).ravel()):\n",
-    "    ax.text(0,0,str(i))"
+    "    ax.text(0.5,0.5,str(i))"
    ]
   },
   {
@@ -1410,11 +1424,9 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "dc800e5d61c9e3c049001c7d7cf96b16f7c8a1a7caee44baf3fc436d9ec555c3"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit ('base': conda)",
+   "display_name": "Python 3.8.12 ('python_graphs')",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -1432,6 +1444,11 @@
   "metadata": {
    "interpreter": {
     "hash": "0314860021bfd1d6d5065173ecf1d472a069bf5b92310f1daa2ee9c3af705d8c"
+   }
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "e3e66c793b5272eb6ced2ef395fa3f1e661a5b1d7880dcfb1a8fb41860f8b331"
    }
   }
  },
