--- a/72_2D_MFPADs_theory.ipynb
+++ b/72_2D_MFPADs_theory.ipynb
@@ -41,14 +41,14 @@
     "#loads the temperaure cmap like Philipp for both matpplotlib and plotly\n",
     "cmap_temp, cmap_temp_go, Magma_r, Seismic_r = fugi.customcmaps()\n",
     "\n",
-    "#!TFMOx_oldPhilippTheory\n",
+    "#!S-TFMOx_oldPhilippTheory\n",
     "# path = r'../PYTHON_graphs/DATA/Theory/TFMox-S/enant=S_hel=+1_KE=3.0eV';en=\"KE=3eV\";\n",
     "# path = r'../PYTHON_graphs/DATA/Theory/TFMox-S/enant=S_hel=+1_KE=4.0eV';en=\"KE=4eV\";\n",
     "# path = r'../PYTHON_graphs/DATA/Theory/TFMox-S/enant=S_hel=+1_KE=6.1eV';en=\"KE=6.1eV\";\n",
     "# path = r'../PYTHON_graphs/DATA/Theory/TFMox-S/enant=S_hel=+1_KE=8.2eV';en=\"KE=8.2eV\";\n",
     "# path = r'../PYTHON_graphs/DATA/Theory/TFMox-S/enant=S_hel=+1_KE=11.5eV';en=\"KE=11.5eV\";\n",
     "\n",
-    "#TFMOx\n",
+    "#S-TFMOx\n",
     "# path = r'../PYTHON_graphs/DATA/Theory/TFMox-S_22/enant=S_hel=+1_KE=3.1eV';en=\"KE=3.1eV\";\n",
     "# path = r'../PYTHON_graphs/DATA/Theory/TFMox-S_22/enant=S_hel=+1_KE=4.1eV';en=\"KE=4.1eV\";\n",
     "# path = r'../PYTHON_graphs/DATA/Theory/TFMox-S_22/enant=S_hel=+1_KE=6.1eV';en=\"KE=6.1eV\";\n",
@@ -332,7 +332,7 @@
    "source": [
     "#convert the counts into a 2D np array and sort according to cos and phi\n",
     "#NOTE: theta is along the z_MF and phi is atan(x_MF,y_MF)\n",
-    "fugi = reload(fugi)\n",
+    "# fugi = reload(fugi)\n",
     "counts_temp=[] #standard cos sorted S enantiomer\n",
     "check_file=[] #standard cos sorted S enantiomer\n",
     "MFPAD_R_std=[]\n",
@@ -617,10 +617,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "#exported for rendering in 3D (Python codes 3D_MFPADs_xxx)\n",
     "%store MFPAD_S_std\n",
