modification of paper

--- a/3D_MFPADs_exp_all.ipynb
+++ b/3D_MFPADs_exp_all.ipynb
@@ -957,6 +957,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import open3d as o3d\n",
+    "import sys\n",
+    "import trimesh\n",
+    "\n",
     "def lod_mesh_export(mesh, lods, extension, path, enant):\n",
     "    mesh_lods={}\n",
     "    for i in lods:\n",
@@ -966,18 +970,8 @@
     "        else:\n",
     "            o3d.io.write_triangle_mesh(path+\"S_lod_\"+str(i)+extension, mesh_lod) #for 11.5 eV\n",
     "        mesh_lods[i]=mesh_lod\n",
-    "    print(\"generation of \"+str(i)+\" LoD successful\")\n",
-    "    return mesh_lods"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import open3d as o3d\n",
-    "import trimesh\n",
+    "        print(\"generation of \"+str(i)+\" LoD successful\")\n",
+    "    return mesh_lods\n",
     "\n",
     "sys.path.append('..'); output_path=(r\"../PYTHON_graphs/OUTPUTS/meshes/\"+en+\"/\")\n",
     "alpha_mesh=[]; poisson_mesh=[]; densities=[]\n",
