--- a/3D_MFPADs_theory_plotly.ipynb
+++ b/3D_MFPADs_theory_plotly.ipynb
@@ -422,8 +422,9 @@
     "dfind.loc[dfind[\"phi\"] == 74.318]\n",
     "\n",
     "#selecting the rght file according to the needs [\"filename\"] == \"x_x\"]\n",
-    "nitem=37\n",
-    "# nitem=4"
+    "# nitem=37\n",
+    "# nitem=4\n",
+    "nitem=11\n"
    ]
   },
   {
@@ -717,6 +718,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import open3d as o3d\n",
+    "import sys\n",
+    "import trimesh\n",
+    "\n",
     "def lod_mesh_export(mesh, lods, extension, path, enant, optimization):\n",
     "    mesh_lods={}\n",
     "    for i in lods:\n",
@@ -732,19 +737,8 @@
     "            else:\n",
     "                o3d.io.write_triangle_mesh(path+\"S_lod_\"+str(i)+extension, mesh_lod) #for 11.5 eV\n",
     "        mesh_lods[i]=mesh_lod\n",
-    "    print(\"generation of \"+str(i)+\" LoD successful\")\n",
-    "    return mesh_lods"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import open3d as o3d\n",
-    "import sys\n",
-    "import trimesh\n",
+    "        print(\"generation of \"+str(i)+\" LoD successful\")\n",
+    "    return mesh_lods\n",
     "\n",
     "sys.path.append('..'); output_path=(r\"../PYTHON_graphs/OUTPUTS/meshes/\"+en+\"/\")\n",
     "alpha_mesh=[]; poisson_mesh=[]; densities=[]\n",
@@ -752,18 +746,17 @@
     "alpha_mesh = o3d.geometry.TriangleMesh()\n",
     "pcd = o3d.geometry.PointCloud()\n",
     "pcd.normals = o3d.utility.Vector3dVector(np.zeros((1, 3)))  # invalidate existing normals\n",
-    "camera_loc=np.array([0.,0.,-1.])\n",
     "\n",
     "#load the point cloud: select the desired point cloud\n",
-    "# point_cloud=np.array([xs,ys,zs]).T #single MFPAD -> chanhe the number in the outputfile (e.g. 37 or 4)\n",
-    "point_cloud=np.array([x,y,z]).T #sum MFPAD\n",
+    "point_cloud=np.array([xs,ys,zs]).T #single MFPAD -> chanhe the number in the outputfile (e.g. 37,4,11)\n",
+    "# point_cloud=np.array([x,y,z]).T #sum PA-MFPAD\n",
     "\n",
     "cloud = PyntCloud.from_instance(\"open3d\", pcd)\n",
     "pcd.points = o3d.utility.Vector3dVector(point_cloud)\n",
     "#resise the scale of the sample\n",
     "vox_grid = o3d.geometry.VoxelGrid.create_from_point_cloud(pcd, 1.)\n",
     "\n",
-    "#KD neighbour\n",
+    "#construct the KD neighbour\n",
     "kdtree = cloud.add_structure(\"kdtree\")\n",
     "# dela3d = cloud.add_structure(\"delaunay3D\")\n",
     "testc = cloud.get_neighbors(k=10)\n",
@@ -773,17 +766,22 @@
     "#compute the normals\n",
     "pcd.estimate_normals(); #mandatory\n",
     "# mesh.compute_vertex_normals()\n",
+    "# The followings are good for open surfaces (not this case)\n",
     "# pcd.normals = o3d.utility.Vector3dVector(point_cloud) #perfectly radial and long, independent by the tangent plane\n",
-    "# They seem good for open surfaces, but not for my case\n",
     "# pcd.estimate_normals(search_param=o3d.geometry.KDTreeSearchParamHybrid(radius=0.05,max_nn=20));\n",
     "# pcd.estimate_normals(search_param=o3d.geometry.KDTreeSearchParamKNN(knn=50));\n",
     "\n",
-    "'''orient the normals'''\n",
-    "#Number of nearest neighbours: 5 is the minimum to have a closed surface with scale >= 2\n",
+    "'''Orient the normals:\n",
+    "Number of nearest neighbours: 5 is the minimum to have a closed surface with scale >= 2\n",
+    "7 for higher bis\n",
+    "5 for normal bins\n",
+    "'''\n",
     "pcd.orient_normals_consistent_tangent_plane(7) #higher #bins\n",
     "# pcd.orient_normals_consistent_tangent_plane(5) #normal bins\n",
-    "# pcd.orient_normals_towards_camera_location(camera_loc) #normal bins\n",
-    "# pcd.orient_normals_to_align_with_direction([0.,1.,0.]) #normal bins\n",
+    "#other options for allignment\n",
+    "# camera_loc=np.array([0.,0.,-1.])\n",
+    "# pcd.orient_normals_towards_camera_location(camera_loc)\n",
+    "# pcd.orient_normals_to_align_with_direction([0.,1.,0.])\n",
     "\n",
     "'''####################################################################\n",
     "#########################alpha-shape algorithm#########################\n",
@@ -799,9 +797,9 @@
     "#high bins\n",
     "# poisson_mesh, densities = o3d.geometry.TriangleMesh.create_from_point_cloud_poisson(pcd, depth=10, width=0, scale=2.5, linear_fit=False)\n",
     "# poisson_mesh, densities = o3d.geometry.TriangleMesh.create_from_point_cloud_poisson(pcd, depth=9, width=0, scale=2., linear_fit=False)\n",
-    "#normal bins single MFAD\n",
+    "#SINGLE MFPAD: normal bins\n",
     "poisson_mesh, densities = o3d.geometry.TriangleMesh.create_from_point_cloud_poisson(pcd, depth=7, width=0, scale=1.2, linear_fit=False)\n",
-    "#normal bins tot MFPAD\n",
+    "#PA-MAFPAD: normal bins\n",
     "# poisson_mesh, densities = o3d.geometry.TriangleMesh.create_from_point_cloud_poisson(pcd, depth=10, width=0, scale=1.2, linear_fit=False)\n",
     "\n",
     "bbox = pcd.get_axis_aligned_bounding_box()\n",
@@ -814,8 +812,9 @@
     "# radii = [0.08, 0.1, 0.2, 0.4] #multiple radii!\n",
     "# bpa_mesh = o3d.geometry.TriangleMesh.create_from_point_cloud_ball_pivoting(pcd,o3d.utility.DoubleVector(radii))\n",
     "\n",
-    "#both for single and tot MFPAD\n",
+    "#both for single and PA-MFPAD\n",
     "radius = 1.5 * avg_dist\n",
+    "#high radiud as a test\n",
     "# radius = 3.5 * avg_dist\n",
     "bpa_mesh = o3d.geometry.TriangleMesh.create_from_point_cloud_ball_pivoting(pcd,o3d.utility.DoubleVector([radius, radius * 2]))\n",
     "\n",
@@ -883,28 +882,31 @@
     "bpa_mesh.vertex_colors = o3d.utility.Vector3dVector(density_colors)\n",
     "tri_mesh_pois.vertex_colors = o3d.utility.Vector3dVector(density_colors)\n",
     "\n",
+    "#!SELECT THE NAME OF THE OUTPUT\n",
     "if enant == \"R\":\n",
-    "    o3d.io.write_triangle_mesh(output_path+\"R_MFPAD_tot_bpa_mesh_theory.ply\", dec_mesh);\n",
+    "    # o3d.io.write_triangle_mesh(output_path+\"R_MFPAD_tot_bpa_mesh_theory.ply\", dec_mesh);\n",
     "    # o3d.io.write_triangle_mesh(output_path+\"R_MFPAD_37_bpa_mesh_theory.ply\", dec_mesh);\n",
     "    # o3d.io.write_triangle_mesh(output_path+\"R_MFPAD_4_bpa_mesh_theory.ply\", dec_mesh);\n",
-    "    o3d.io.write_triangle_mesh(output_path+\"R_MFPAD_tot_p_mesh_theory.ply\", poisson_mesh);\n",
+    "    o3d.io.write_triangle_mesh(output_path+\"R_MFPAD_11_bpa_mesh_theory.ply\", dec_mesh);\n",
+    "    # o3d.io.write_triangle_mesh(output_path+\"R_MFPAD_tot_p_mesh_theory.ply\", poisson_mesh);\n",
     "    # o3d.io.write_triangle_mesh(output_path+\"R_MFPAD_37_p_mesh_theory.ply\", poisson_mesh);\n",
     "    # o3d.io.write_triangle_mesh(output_path+\"R_MFPAD_4_p_mesh_theory.ply\", poisson_mesh);\n",
-    "    # o3d.io.write_triangle_mesh(output_path+\"R_MFPAD_p_mesh_c_theory.ply\", p_mesh_crop);\n",
+    "    o3d.io.write_triangle_mesh(output_path+\"R_MFPAD_11_p_mesh_theory.ply\", p_mesh_crop);\n",
     "else:\n",
-    "    o3d.io.write_triangle_mesh(output_path+\"S_MFPAD_tot_bpa_mesh_theory.ply\", dec_mesh);\n",
+    "    # o3d.io.write_triangle_mesh(output_path+\"S_MFPAD_tot_bpa_mesh_theory.ply\", dec_mesh);\n",
     "    # o3d.io.write_triangle_mesh(output_path+\"S_MFPAD_37_bpa_mesh_theory.ply\", dec_mesh);\n",
     "    # o3d.io.write_triangle_mesh(output_path+\"S_MFPAD_4_bpa_mesh_theory.ply\", dec_mesh);\n",
-    "    o3d.io.write_triangle_mesh(output_path+\"S_MFPAD_tot_p_mesh_theory.ply\", poisson_mesh);\n",
+    "    o3d.io.write_triangle_mesh(output_path+\"S_MFPAD_11_bpa_mesh_theory.ply\", dec_mesh);\n",
+    "    # o3d.io.write_triangle_mesh(output_path+\"S_MFPAD_tot_p_mesh_theory.ply\", poisson_mesh);\n",
     "    # o3d.io.write_triangle_mesh(output_path+\"S_MFPAD_37_p_mesh_theory.ply\", poisson_mesh);\n",
     "    # o3d.io.write_triangle_mesh(output_path+\"S_MFPAD_4_p_mesh_theory.ply\", poisson_mesh);\n",
-    "    # o3d.io.write_triangle_mesh(output_path+\"S_MFPAD_p_mesh_c_theory.ply\", p_mesh_crop);\n",
+    "    o3d.io.write_triangle_mesh(output_path+\"S_MFPAD_11_p_mesh_theory.ply\", p_mesh_crop);\n",
     "\n",
     "# my_lods = lod_mesh_export(p_mesh_crop, [100000,50000,10000,1000,100], \".ply\", output_path, enant, optimization)\n",
-    "my_lods = lod_mesh_export(poisson_mesh, [100000,50000,10000,1000,100], \"_MFPAD_tot_th.ply\", output_path, enant, optimization)\n",
+    "# my_lods = lod_mesh_export(poisson_mesh, [100000,50000,10000,1000,100], \"_MFPAD_tot_th.ply\", output_path, enant, optimization)\n",
     "# my_lods = lod_mesh_export(poisson_mesh, [100000,50000,10000,1000,100], \"_MFPAD_37_th.ply\", output_path, enant, optimization)\n",
     "# my_lods = lod_mesh_export(poisson_mesh, [100000,50000,10000,1000,100], \"_MFPAD_4_th.ply\", output_path, enant, optimization)\n",
-    "# my_lods = lod_mesh_export(poisson_mesh, [100000,50000,10000,1000,100], \"_MFPAD_0_th.ply\", output_path, enant, optimization)"
+    "my_lods = lod_mesh_export(poisson_mesh, [100000,50000,10000,1000,100], \"_MFPAD_11_th.ply\", output_path, enant, optimization)"
    ]
   },
   {
@@ -913,10 +915,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# o3d.visualization.draw_geometries([pcd, p_mesh_crop], mesh_show_back_face=True\n",
+    "# o3d.visualization.draw_geometries([pcd, p_mesh_crop], mesh_show_back_face=True)\n",
     "# o3d.visualization.draw_geometries([pcd, bpa_mesh], mesh_show_back_face=True)\n",
-    "o3d.visualization.draw_geometries([pcd, poisson_mesh],mesh_show_back_face=True)\n",
-    "# o3d.visualization.draw_geometries([pcd, poisson_mesh[100000]],point_show_normal=True)"
+    "o3d.visualization.draw_geometries([pcd, poisson_mesh],mesh_show_back_face=True)"
    ]
   },
   {
